--- a/.github/workflows/github-ci-config.yml
+++ b/.github/workflows/github-ci-config.yml
@@ -1,24 +1,29 @@
-image: maven:latest
 on:
-  push:
-    branches:
-      - main
-stages:
-  - build
+  release:
+    types: [created]
 
+jobs:
+  build:
 
-variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
-  GIT_REPO_URL: "https://github.com/mohsendabdaba/tondeuse.git"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
-before_script:
-  - mvn clean install -DskipTests=true
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-build:
-  stage: build
-  script:
-    - git clone $GIT_REPO_URL
-    - cd tondeuse
-    - mvn package
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-
+    - name: Publish to GitHub Packages Apache Maven
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
